--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
     "html-webpack-plugin": "2.29.0",
+    "polished": "^1.9.3",
     "raf": "3.4.0",
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
