--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,9 @@
 {
   "processors": ["stylelint-processor-styled-components"],
-  "extends": "stylelint-config-standard",
+  "extends": [
+    "stylelint-config-recommended",
+    "stylelint-config-styled-components"
+  ],
   "syntax": "scss",
   "rules": {
     "declaration-block-no-duplicate-properties": [
