--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "recompose": "^0.28.2",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "styled-components": "^3.3.2",
@@ -34,14 +35,11 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "7.4.0",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
@@ -55,6 +53,7 @@
     "promise": "8.0.1",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
