--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-links": "^3.4.10",
     "autoprefixer": "7.1.6",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
@@ -12,7 +13,8 @@
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
-    "recompose": "^0.28.2",
+    "recompose": "^0.30.0",
+    "remove": "^0.1.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "styled-components": "^3.3.2",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-knobs": "^3.4.10",
     "@storybook/addon-options": "^3.4.10",
     "@storybook/react": "^3.4.10",
     "babel-cli": "^6.26.0",
@@ -54,6 +57,7 @@
     "postcss-loader": "2.0.8",
     "prettier": "^1.13.5",
     "promise": "8.0.1",
+    "storybook-readme": "^4.0.0-beta1",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
