--- a/package.json
+++ b/package.json
@@ -67,10 +67,9 @@
     "webpack-manifest-plugin": "1.3.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "start-storybook -p 9000",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "storybook": "start-storybook -p 9000",
     "precommit": "lint-staged",
     "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}"
   },
