--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/addon-links": "^3.4.10",
     "autoprefixer": "7.1.6",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
@@ -27,7 +26,10 @@
     "@storybook/addon-actions": "^3.4.10",
     "@storybook/addon-knobs": "^3.4.10",
     "@storybook/addon-options": "^3.4.10",
-    "@storybook/react": "^3.4.10",
+    "@storybook/react": "4.0.0-alpha.3",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
@@ -59,11 +61,14 @@
     "prettier": "^1.13.5",
     "promise": "8.0.1",
     "react-test-renderer": "^16.5.1",
+    "source-map-loader": "^0.2.4",
     "storybook-readme": "^4.0.0-beta1",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
+    "typescript": "^3.0.3",
+    "typescript-plugin-styled-components": "^0.0.7",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2"
