--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^23.10.0",
     "typescript": "^3.0.3",
+    "typescript-plugin-styled-components": "^0.0.7",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2"
