--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": "./src"
   },
   "awesomeTypescriptLoaderOptions": {
     "reportFiles": ["./src/**/*"]
