--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-typescript": "^0.12.0",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "husky": "^0.14.3",
@@ -70,6 +71,7 @@
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^23.10.0",
     "typescript": "^3.0.3",
+    "typescript-eslint-parser": "^18.0.0",
     "typescript-plugin-styled-components": "^0.0.7",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
