--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/styled-components": "^3.0.1",
     "autoprefixer": "7.1.6",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
