--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-typescript": "^0.12.0",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
@@ -82,6 +82,7 @@
     "start": "start-storybook -p 9000",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "eslint": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
     "compile": "tsc",
     "precommit": "lint-staged",
     "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}"
