--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "start": "start-storybook -p 9000",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "eslint": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
+    "lint:eslint": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,ts,tsx}'",
     "lint:prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
     "compile": "tsc",
