--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "husky": "^0.14.3",
     "jest": "^23.5.0",
     "lint-staged": "^7.2.0",
+    "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -85,6 +86,7 @@
     "lint:eslint": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,ts,tsx}'",
     "lint:prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
+    "lint": "run-s lint:*",
     "compile": "tsc",
     "precommit": "lint-staged",
     "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}"
