--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "remove": "^0.1.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
-    "styled-components": "^3.3.2",
+    "styled-components": "^4.0.0-beta.10",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "whatwg-fetch": "2.0.3"
