--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,13 @@
   "extends": [
     "react-app",
     "plugin:jest/recommended",
+    "plugin:jsx-a11y/strict",
     "eslint:recommended",
     "prettier"
   ],
   "plugins": [
     "typescript",
-    "import",
-    "jsx-a11y"
+    "import"
   ],
   "parser": "typescript-eslint-parser",
   "env": {
