--- a/package.json
+++ b/package.json
@@ -1,7 +1,34 @@
 {
   "name": "styled-components-toolbox",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
+  "description": "Set of components based on Styled Components",
+  "homepage": "https://github.com/ravecat/styled-components-toolbox",
+  "keywords": [
+    "css",
+    "css-in-js",
+    "styled-components",
+    "design",
+    "styling",
+    "react",
+    "react-component",
+    "component",
+    "components",
+    "ui"
+  ],
+  "author": "Max Sharov",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ravecat/styled-components-toolbox"
+  },
+  "bugs": {
+    "url": "https://github.com/ravecat/styled-components-toolbox/issues"
+  },
+  "main": "dist/styled-components-toolbox.js",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
@@ -14,7 +41,6 @@
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
-    "recompose": "^0.30.0",
     "remove": "^0.1.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
@@ -24,7 +50,6 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0",
     "@storybook/addon-actions": "^3.4.10",
     "@storybook/addon-knobs": "^3.4.10",
     "@storybook/addon-options": "^3.4.10",
@@ -37,7 +62,9 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-styled-components": "^1.5.1",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -64,6 +91,14 @@
     "prettier": "^1.14.3",
     "promise": "8.0.1",
     "react-test-renderer": "^16.5.1",
+    "recompose": "^0.30.0",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
     "source-map-loader": "^0.2.4",
     "storybook-readme": "^4.0.0-beta1",
     "stylelint": "^9.3.0",
@@ -78,13 +113,18 @@
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2"
   },
+  "peerDependencies": {
+    "react": ">= 16.3.0",
+    "react-dom": ">= 16.3.0"
+  },
   "scripts": {
-    "start": "start-storybook -p 9000",
-    "build": "node scripts/build.js",
+    "storybook": "start-storybook -p 9000",
+    "prebuild": "rimraf dist",
+    "build": "rollup -c",
     "test": "node scripts/test.js --env=jsdom",
     "lint:eslint": "eslint --fix '**/*.{js,jsx,ts,tsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,ts,tsx}'",
-    "lint:prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
     "lint": "run-s lint:*",
     "compile": "tsc",
     "precommit": "lint-staged",
