--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # production
 /build
 /dist
+.rpt2_cache
 
 # misc
 .DS_Store
@@ -14,7 +15,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.vscode/
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
