--- a/.npmignore
+++ b/.npmignore
@@ -1,19 +1,14 @@
-# dependencies
 /node_modules
-
-# testing
 /coverage
-
-# production
 /build
+.storybook
+.vscode
 
-# misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.vscode/
 
 npm-debug.log*
 yarn-debug.log*
