--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/recompose": "^0.27.0",
     "@types/styled-components": "^3.0.1",
     "autoprefixer": "7.1.6",
     "css-loader": "0.28.7",
@@ -60,12 +61,12 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "babel-runtime": "6.26.0",
+    "babel-runtime": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "dotenv": "4.0.0",
@@ -94,11 +95,13 @@
     "recompose": "^0.30.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
-    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-svg": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.17.2",
     "source-map-loader": "^0.2.4",
     "storybook-readme": "^4.0.0-beta1",
     "stylelint": "^9.3.0",
@@ -106,7 +109,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^23.10.0",
-    "typescript": "^3.0.3",
+    "typescript": "^3.2.0-dev.20181102",
     "typescript-eslint-parser": "^18.0.0",
     "typescript-plugin-styled-components": "^0.0.7",
     "webpack": "3.8.1",
