--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-styled-components": "^1.5.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
