--- a/.flowconfig
+++ b/.flowconfig
@@ -4,4 +4,4 @@
 .*/lib/.*
 [options]
 module.system.node.resolve_dirname=node_modules
-module.system.node.resolve_dirname=src
+module.system.node.resolve_dirname=./src
