Update rollup configuration
Add helpers for rollup flow, fix problem with resolve external modules

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,7 @@
 {
   "presets": [[
-    "env", {
-      "targets": {
-        "browsers": ["last 2 versions", "> 5% in BE"],
-        "uglify": true
-      },
+    "env",
+    {
       "modules": false
     }],
     "flow",
