--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "extract-text-webpack-plugin": "3.0.2",
     "html-webpack-plugin": "2.29.0",
     "raf": "3.4.0",
-    "react": "^16.4.0",
+    "react": "^16.6.3",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "recompose": "^0.30.0",
     "remove": "^0.1.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
-    "styled-components": "^4.0.0-beta.10",
+    "styled-components": "^4.1.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "whatwg-fetch": "2.0.3"
@@ -55,7 +56,9 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-styled-components": "^1.5.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
@@ -85,12 +88,13 @@
     "prettier": "^1.14.3",
     "promise": "8.0.1",
     "react-test-renderer": "^16.5.1",
-    "recompose": "^0.30.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-svg": "^1.0.1",
@@ -104,7 +108,6 @@
     "webpack-manifest-plugin": "1.3.2"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0",
     "react-dom": ">= 16.3.0"
   },
   "scripts": {
