--- a/package.json
+++ b/package.json
@@ -37,11 +37,9 @@
     "react": "^16.6.3",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
-    "recompose": "^0.30.0",
     "remove": "^0.1.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
-    "styled-components": "^4.1.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "whatwg-fetch": "2.0.3"
@@ -88,6 +86,7 @@
     "prettier": "^1.14.3",
     "promise": "8.0.1",
     "react-test-renderer": "^16.5.1",
+    "recompose": "^0.30.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "3",
@@ -96,9 +95,11 @@
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-svg": "^1.0.1",
     "storybook-readme": "^4.0.0-beta1",
+    "styled-components": "^4.1.2",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -108,7 +109,9 @@
     "webpack-manifest-plugin": "1.3.2"
   },
   "peerDependencies": {
-    "react-dom": ">= 16.3.0"
+    "react-dom": ">= 16.3.0",
+    "recompose": ">= 0.20.0",
+    "styled-components": ">= 4"
   },
   "scripts": {
     "storybook": "start-storybook -p 9000",
