Update tests and test environment

--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "postcss-loader": "2.0.8",
     "prettier": "^1.14.3",
     "promise": "8.0.1",
-    "react-test-renderer": "^16.5.1",
+    "react-test-renderer": "^16.6.3",
+    "regenerator-runtime": "^0.13.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "3",
