--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
   },
   "peerDependencies": {
     "react-dom": ">= 16.3.0",
-    "styled-components": ">= 4"
+    "styled-components": ">= 4",
+    "dotenv": ">= 4"
   },
   "scripts": {
     "storybook": "start-storybook -p 9000",
