Add rollup environment

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
     "@storybook/addon-actions": "^4.1.12",
     "@storybook/addon-knobs": "^4.1.12",
     "@storybook/addon-links": "^4.1.12",
@@ -87,6 +88,16 @@
     "react-dom": "^16.8.2",
     "react-test-renderer": "^16.5.1",
     "resolve": "1.10.0",
+    "rollup": "^1.3.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-svg": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "styled-components": "^4.1.3",
@@ -109,7 +120,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "rollup -c",
+    "build": "NODE_ENV=production rollup -c",
     "test": "jest",
     "lint:eslint": "eslint 'src/**/*.{js,jsx}'",
     "lint:stylelint": "stylelint 'src/**/*.{js,jsx,css}'",
