--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,23 @@
-# dependencies
 /node_modules
-
-# testing
 /coverage
+/build
+/app
+/config
 
 # production
 /build
 /dist
 .rpt2_cache
+*.tgz
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.*
+.env.*.local
+.vscode
+
+.storybook
 .vscode
 
 npm-debug.log*
