--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "rollup-plugin-uglify": "^6.0.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.2.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -115,13 +115,12 @@
   "peerDependencies": {
     "dotenv": ">= 4",
     "react": ">= 16.0.0",
-    "react-dom": ">= 16.0.0",
-    "styled-components": ">= 4"
+    "react-dom": ">= 16.0.0"
   },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c",
-    "test": "jest '**/*.{js,jsx,ts,tsx}' --passWithNoTests",
+    "test": "jest --passWithNoTests",
     "lint:eslint": "eslint '**/*.{js,jsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,css}'",
     "prettier": "prettier --write '**/*.{js,jsx,json,css,md}'",
