--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "styled-components-toolbox",
   "version": "0.2.1",
-  "description": "Set of components based on Styled Components",
+  "description": "Set of components based on styled-components",
   "homepage": "https://github.com/ravecat/styled-components-toolbox",
   "keywords": [
     "css",
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/plugin-external-helpers": "^7.2.0",
     "@storybook/addon-actions": "^4.1.12",
     "@storybook/addon-knobs": "^4.1.12",
     "@storybook/addon-links": "^4.1.12",
@@ -100,7 +99,6 @@
     "rollup-plugin-uglify": "^6.0.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "styled-components": "^4.2.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -115,7 +113,8 @@
   "peerDependencies": {
     "dotenv": ">= 4",
     "react": ">= 16.0.0",
-    "react-dom": ">= 16.0.0"
+    "react-dom": ">= 16.0.0",
+    "styled-components": "4.1.3"
   },
   "scripts": {
     "prebuild": "rimraf dist",
