--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
     "@storybook/addon-actions": "^4.1.12",
     "@storybook/addon-knobs": "^4.1.12",
     "@storybook/addon-links": "^4.1.12",
@@ -51,6 +53,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "1.1.3",
     "css-loader": "1.0.0",
+    "cz-customizable": "^6.2.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.12.0",
@@ -119,6 +122,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c",
+    "build:storybook": "build-storybook",
     "test": "jest --passWithNoTests",
     "lint:eslint": "eslint '**/*.{js,jsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,css}'",
@@ -126,16 +130,28 @@
     "lint": "yarn lint:eslint && yarn lint:stylelint",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint --fix",
     "precommit": "lint-staged",
-    "prettier-watch": "onchange '**/*.{js,jsx,ts,tsx,json,css,md}' -- prettier --write {{changed}}",
-    "storybook": "start-storybook -p 9000 -c storybook",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 9000 -c storybook"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "yarn lint:eslint --fix",
-      "yarn lint:stylelint --fix",
+      "eslint --fix",
+      "stylelint --fix",
       "yarn test",
       "git add"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "./commitizen.config.js"
+    }
   }
 }
