--- a/package.json
+++ b/package.json
@@ -90,18 +90,19 @@
     "react-dom": "^16.8.2",
     "react-test-renderer": "^16.5.1",
     "resolve": "1.10.0",
-    "rollup": "^1.3.0",
+    "rollup": "1.16.4",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-commonjs": "10.0.1",
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.2",
     "sass-loader": "7.1.0",
+    "semantic-release": "^15.13.18",
     "style-loader": "0.23.1",
+    "styled-components": "^4.3.2",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -114,10 +115,8 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "peerDependencies": {
-    "dotenv": ">= 4",
-    "react": ">= 16.0.0",
-    "react-dom": ">= 16.0.0",
-    "styled-components": "4.1.3"
+    "react": ">= 16.3",
+    "styled-components": ">= 4"
   },
   "scripts": {
     "prebuild": "rimraf dist",
