--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "dist"
   ],
   "dependencies": {
-    "recompose": "^0.30.0",
-    "remove": "^0.1.5"
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
