--- a/package.json
+++ b/package.json
@@ -60,13 +60,14 @@
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.12.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-config-react-app": "^3.0.7",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jest": "^21.25.1",
     "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "7.12.4",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
@@ -127,9 +128,7 @@
     "test": "jest --passWithNoTests",
     "lint:eslint": "eslint '**/*.{js,jsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,css}'",
-    "prettier": "prettier --write '**/*.{js,jsx,json,css,md}'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
-    "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint --fix",
     "precommit": "lint-staged",
     "storybook": "start-storybook -p 9000 -c storybook",
     "storybook:build": "build-storybook -c storybook -o ./storybook_build",
@@ -142,10 +141,14 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "*.js": [
       "eslint --fix",
       "stylelint --fix",
       "yarn test",
+      "git add"
+    ],
+    "*.{css,md,yml,json}": [
+      "prettier --write",
       "git add"
     ]
   },
