style(scripts): update code style

--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "lint:eslint": "eslint '**/*.{js,jsx}'",
     "lint:stylelint": "stylelint '**/*.{js,jsx,css}'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint --fix",
     "precommit": "lint-staged",
     "storybook": "start-storybook -p 9000 -c storybook",
     "storybook:build": "build-storybook -c storybook -o ./storybook_build",
