ci(scripts): update cleaning stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,10 +123,9 @@ storybook:
 cleaning:
   stage: cleaning
   tags:
-    - shell
+    - docker
   only:
     - develop
-    - master
   dependencies: []
   script:
     - docker info
