--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,9 +129,8 @@ storybook:
     - apk add python-dev libffi-dev openssl-dev gcc libc-dev make
     - pip install --upgrade pip
     - pip install docker-compose
-    - sudo docker image prune -f
-    - sudo docker-compose build --no-cache
-    - sudo docker-compose up -d
+    - docker-compose build --no-cache
+    - docker-compose up -d
 
 cleaning:
   stage: cleaning
