--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "styled-components-toolbox",
   "version": "0.5.0",
   "description": "Set of components based on styled-components",
-  "homepage": "https://github.com/ravecat/styled-components-toolbox",
+  "homepage": "https://gitlab.com/rvct/styled-components-toolbox",
   "keywords": [
     "css",
     "css-in-js",
     "styled-components",
-    "design",
     "styling",
     "react",
     "react-component",
@@ -19,109 +18,41 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/ravecat/styled-components-toolbox.git"
+    "url": "https://gitlab.com/rvct/styled-components-toolbox.git"
   },
   "bugs": {
-    "url": "https://gitlab.com/ravecat/styled-components-toolbox/issues"
+    "url": "https://gitlab.com/rvct/styled-components-toolbox/issues"
   },
   "main": "dist/index.js",
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "@babel/runtime": "^7.7.1",
-    "recompose": "^0.30.0"
-  },
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-angular": "^8.0.0",
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/git": "^7.0.16",
-    "@semantic-release/gitlab": "^3.1.7",
-    "@storybook/addon-actions": "^4.1.12",
-    "@storybook/addon-knobs": "^4.1.12",
-    "@storybook/addon-links": "^4.1.12",
-    "@storybook/addon-options": "^4.1.12",
-    "@storybook/addons": "^4.1.12",
-    "@storybook/react": "^4.1.12",
-    "@svgr/webpack": "4.1.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.5",
-    "babel-plugin-named-asset-import": "^0.3.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "babel-preset-react-app": "^7.0.1",
-    "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chalk": "1.1.3",
-    "css-loader": "1.0.0",
-    "cz-customizable": "^6.2.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "5.12.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-config-react-app": "^3.0.7",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "^21.25.1",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "7.12.4",
-    "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "husky": "^1.0.1",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
-    "jest-pnp-resolver": "1.0.2",
-    "jest-resolve": "23.6.0",
-    "jest-watch-typeahead": "^0.2.1",
-    "lint-staged": "^7.2.0",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.2.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.5.0",
-    "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.13.5",
-    "react": "^16.8.2",
-    "react-app-polyfill": "^0.2.1",
-    "react-dev-utils": "^7.0.3",
-    "react-dom": "^16.8.2",
-    "react-test-renderer": "^16.5.1",
-    "resolve": "1.10.0",
-    "rollup": "1.16.4",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "10.0.1",
-    "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-svg": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.2",
-    "sass-loader": "7.1.0",
-    "semantic-release": "^15.13.18",
-    "style-loader": "0.23.1",
-    "styled-components": "^4.3.2",
-    "stylelint": "^9.3.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.3.1",
-    "terser-webpack-plugin": "1.2.2",
-    "url-loader": "1.1.2",
-    "webpack": "4.28.3",
-    "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "@babel/core": "^7.12.10",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-docs": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/addons": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "@storybook/theming": "^6.1.11",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
   },
   "peerDependencies": {
-    "react": ">= 16.8",
-    "styled-components": ">= 4"
+    "react": "^17.0.1",
+    "styled-components": ">= 5"
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -132,16 +63,10 @@
     "lint": "yarn lint:eslint && yarn lint:stylelint",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint",
     "precommit": "lint-staged",
-    "storybook": "start-storybook -p 9000 -c storybook",
-    "storybook:build": "build-storybook -c storybook -o ./storybook_build",
+    "storybook": "start-storybook -p 9000",
+    "storybook:build": "build-storybook -o ./build",
     "release:debug": "semantic-release --debug",
     "prettier": "prettier --check *.{css,md,yml,json}"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   },
   "lint-staged": {
     "*.js": [
@@ -165,5 +90,6 @@
     "cz-customizable": {
       "config": "./commitizen.config.js"
     }
-  }
+  },
+  "dependencies": {}
 }
