build(dependencies): enable eslint functionality

--- a/package.json
+++ b/package.json
@@ -43,11 +43,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "peerDependencies": {
@@ -55,16 +62,16 @@
     "styled-components": ">= 5"
   },
   "scripts": {
+    "storybook": "start-storybook -p 9000",
+    "storybook:build": "build-storybook -o ./build",
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production rollup -c",
     "test": "jest --passWithNoTests",
-    "lint:eslint": "eslint \"**/*.{js,jsx}\"",
+    "lint:eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "lint:stylelint": "stylelint '**/*.{js,jsx,css}'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint",
     "precommit": "lint-staged",
-    "storybook": "start-storybook -p 9000",
-    "storybook:build": "build-storybook -o ./build",
     "release:debug": "semantic-release --debug",
     "prettier": "prettier --check *.{css,md,yml,json}"
   },
