--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "files": [
     "dist"
   ],
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@storybook/addon-actions": "^6.1.11",
@@ -54,6 +55,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -68,7 +75,7 @@
     "build": "NODE_ENV=production rollup -c",
     "test": "jest --passWithNoTests",
     "lint:eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
-    "lint:stylelint": "stylelint '**/*.{js,jsx,css}'",
+    "lint:stylelint": "stylelint '**/*.{js,jsx,ts,tsx,css}'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint",
     "precommit": "lint-staged",
@@ -97,6 +104,5 @@
     "cz-customizable": {
       "config": "./commitizen.config.js"
     }
-  },
-  "dependencies": {}
+  }
 }
