--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-angular": "^11.0.0",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-docs": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
@@ -47,10 +49,13 @@
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "babel-loader": "^8.2.2",
+    "cz-customizable": "^6.3.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.7",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -61,6 +66,7 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -72,35 +78,28 @@
     "storybook": "start-storybook -p 9000",
     "storybook:build": "build-storybook -o ./build",
     "prebuild": "rimraf dist",
+    "commit": "./node_modules/cz-customizable/standalone.js",
     "build": "NODE_ENV=production rollup -c",
     "test": "jest --passWithNoTests",
     "lint:eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "lint:stylelint": "stylelint '**/*.{js,jsx,ts,tsx,css}'",
     "lint": "yarn lint:eslint && yarn lint:stylelint",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:stylelint",
-    "precommit": "lint-staged",
+    "release": "semantic-release",
     "release:debug": "semantic-release --debug",
     "prettier": "prettier --check *.{css,md,yml,json}"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged -v",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "stylelint",
-      "git add"
-    ],
-    "*.{css,md,yml,json}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*": [
-      "yarn test",
-      "git add"
-    ]
+    "*.{js,jsx,ts,tsx,css}": "yarn lint:fix",
+    "*.{md,yml,json}": "yarn prettier --write"
   },
   "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    },
     "cz-customizable": {
       "config": "./commitizen.config.js"
     }
