--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,16 @@
     "paths": {
       "*": ["./src/*", "*"]
     },
+    "outDir": "./dist",
+    "target": "es5",
+    "module": "esnext",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "composite": true,
+    "esModuleInterop": true,
     "jsx": "react",
-    "module": "commonjs",
     "sourceMap": true,
     "allowJs": true,
     "checkJs": true,
-    "declaration": true,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "removeComments": true,
@@ -18,5 +22,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
+  "include": ["src/**/*", "utils/**/*", "stories/**/*"],
   "exclude": ["**/node_modules", "**/.*/"]
 }
